# trh

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  cross_build_aa64  init_db.sh  ui_main.xml  ui_vocabulary.xml
db/: default_schema.sql  default_values.sql
db/tools/: populate_db.sh
src/: DB.cc  DB.hh  Grammar.cc  Log.cc  Log.hh  Log.hxx  MainWindow.cc  MainWindow.hh  UI.cc  UI.hh  Vocabulary.cc  Vocabulary.hh  db_tables.hh  main.cc
src/gtk/: CMakeLists.txt  DB.cc  DB.hh  Grammar.hh  MainWindow.cc  Vocabulary.cc  Vocabulary.hh
tools/: create_desktop_entry.sh
